--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -23,6 +23,13 @@ lana:
   activated: true
   activated_at: <%= Time.zone.now %>
 
+joseph:
+  name: Joseph Nuny
+  email: foots@example.gov
+  password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
+
 malory:
   name: Malory Archer
   email: boss@example.gov
